force-app/main/default/objects/TVA_CFB__Cloud_Files__c/TVA_CFB__Cloud_Files__c.object-meta.xml
<CustomObject>
    <label>Cloud Files</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Files</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>