force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Account__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cloud Files</relationshipLabel>
    <relationshipName>Cloud_Files</relationshipName>
    <type>Lookup</type>
</CustomField>