force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Amazon_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Amazon_Version_ID__c</fullName>
    <label>Version ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>