force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Annotations__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Annotations__c</fullName>
    <label>Annotations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>