force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Box_File_Status__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Box_File_Status__c</fullName>
    <label>Box File Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>