force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Box_Id__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Box_Id__c</fullName>
    <label>Box Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>