force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Bucket_Name__c</fullName>
    <label>Bucket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>