force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Cloud_Public_Access_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Cloud_Public_Access_URL__c</fullName>
    <label>Public Access URL</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>