force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Download_File__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Download_File__c</fullName>
    <formula>IF( TVA_CFB__File_Size_in_Bytes__c != 0, HYPERLINK(&quot;/apex/TVA_CFB__DownloadFile?id=&quot;+Id, &apos;&apos;+$Label.tva_cfb__download_file+&apos;&apos; ), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download File</label>
    <type>Text</type>
</CustomField>