force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Downloads__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Downloads__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>