force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Expire_Date__c</fullName>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>