force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__External_File_Name__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__External_File_Name__c</fullName>
    <inlineHelpText>Same as the File Name in Amazon S3.</inlineHelpText>
    <label>External File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>