force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__File_Path__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__File_Path__c</fullName>
    <label>File Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>