force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__File_Type__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__File_Type__c</fullName>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>