force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__File_Type_Ltng__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__File_Type_Ltng__c</fullName>
    <formula>if ( or (Lower (TVA_CFB__File_Type__c) == &apos;jpg&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;jpeg&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;png&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;bmp&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;dwg&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;jfif&apos;,
Lower (TVA_CFB__File_Type__c) == &apos;gif&apos;), &quot;image&quot;, 

if (or (Lower (TVA_CFB__File_Type__c) == &apos;doc&apos;, Lower (TVA_CFB__File_Type__c) == &apos;docx&apos;), &quot;word&quot;, 
if ( Lower (TVA_CFB__File_Type__c) == &apos;pdf&apos;, &quot;pdf&quot;, 
if (Lower (TVA_CFB__File_Type__c) == &apos;mp4&apos;, &quot;mp4&quot;, 
if (or (Lower (TVA_CFB__File_Type__c) == &apos;3g2&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;3gp&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;avi&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;flv&apos;), &quot;flash&quot;, 
if ( or (Lower (TVA_CFB__File_Type__c) == &apos;mpeg&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;mp4a&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;m4v&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;video&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;wmv&apos;), &quot;video&quot;, 

if ( Lower (TVA_CFB__File_Type__c) == &apos;csv&apos;, &quot;csv&quot;, 
if ( or (Lower (TVA_CFB__File_Type__c) == &apos;xls&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;xlsx&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;xlsm&apos;), &quot;excel&quot;, 

if ( Lower (TVA_CFB__File_Type__c) == &apos;txt&apos;, &quot;txt&quot;, 
if ( Lower (TVA_CFB__File_Type__c) == &apos;xml&apos;, &quot;xml&quot;, 
if ( or ( Lower (TVA_CFB__File_Type__c) == &apos;zip&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;webarchive&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;rar&apos;), &quot;zip&quot;, 

if ( Lower (TVA_CFB__File_Type__c) == &apos;dir&apos;, &quot;folder&quot;, 
if ( or (Lower (TVA_CFB__File_Type__c) == &apos;mp3&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;m3u&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;wav&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;wma&apos;), &quot;audio&quot;, 

if (Lower (TVA_CFB__File_Type__c) == &apos;ppt&apos;, &quot;ppt&quot;, 
if (Lower (TVA_CFB__File_Type__c) == &apos;pptx&apos;, &quot;ppt&quot;, 
if ( Lower (TVA_CFB__File_Type__c) == &apos;rtf&apos;, &quot;rtf&quot;, 
if ( or (Lower (TVA_CFB__File_Type__c) == &apos;html&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;htm&apos;, 
Lower (TVA_CFB__File_Type__c) == &apos;js&apos; 
), &quot;html&quot;, &quot;unknown&quot; 

) 
)	


) 


) 


) 


) 


) 
) 

) 


) 

) 

) 


) 

) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Type Lightning</label>
    <type>Text</type>
</CustomField>