force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Location__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Location__c</fullName>
    <label>Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>