force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Make_Public__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Make_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make Public</label>
    <type>Checkbox</type>
</CustomField>