force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Owner_Name__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>