force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Password_Protect__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Password_Protect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Password Protect</label>
    <type>Checkbox</type>
</CustomField>