force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Preview__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Preview__c</fullName>
    <formula>if(TVA_CFB__File_Size_in_Bytes__c &lt; 5000000 &amp;&amp; TVA_CFB__File_Size_in_Bytes__c &gt; 0,HYPERLINK(&quot;/apex/TVA_CFB__FilePreview?id=&quot;+Id +&quot;&amp;heightFlag=1&quot;, $Label.tva_cfb__preview),$Label.tva_cfb__no_preview_available)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preview</label>
    <type>Text</type>
</CustomField>