force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Public_Short_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Public_Short_URL__c</fullName>
    <label>Public Short URL</label>
    <type>Url</type>
</CustomField>