force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Reduced_Redundancy__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Reduced_Redundancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduced Redundancy</label>
    <type>Checkbox</type>
</CustomField>