force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Reponse_Code__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Reponse_Code__c</fullName>
    <label>Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>