force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Upload_New_Version__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Upload_New_Version__c</fullName>
    <formula>IF( TVA_CFB__File_Size_in_Bytes__c != 0, HYPERLINK(&quot;/apex/TVA_CFB__VersionFileUpload?id=&quot;+Id,&apos; [&apos;+$Label.tva_cfb__upload_new_version+&apos;]&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upload New Version</label>
    <type>Text</type>
</CustomField>