force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__Version__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Version__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>