force-app/main/default/objects/TVA_CFB__Cloud_Files__c/fields/TVA_CFB__View_File__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__View_File__c</fullName>
    <formula>HYPERLINK(&quot;/apex/TVA_CFB__ViewFile?id=&quot;+Id , $Label.tva_cfb__view_file)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View File</label>
    <type>Text</type>
</CustomField>