force-app/main/default/objects/TVA_CFB__Cloud_Files__c/validationRules/TVA_CFB__Docuvault_Validation_Deprecated.validationRule-meta.xml
<ValidationRule>
    <fullName>TVA_CFB__Docuvault_Validation_Deprecated</fullName>
    <active>false</active>
    <errorConditionFormula>CreatedById  = NULL</errorConditionFormula>
    <errorMessage>Deprecated Rule</errorMessage>
</ValidationRule>