force-app/main/default/objects/TVA_CFB__Cloud_Files__c/listViews/TVA_CFB__All.listView-meta.xml
<ListView>
    <fullName>TVA_CFB__All</fullName>
    <columns>NAME</columns>
    <columns>TVA_CFB__Download_File__c</columns>
    <columns>TVA_CFB__Bucket_Name__c</columns>
    <columns>TVA_CFB__Parent_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TVA_CFB__Cloud_Public_Access_URL__c</columns>
    <columns>TVA_CFB__Public_Short_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>